# software-renderer

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: patch_font8x8.cmake
examples/assets/: stormtrooper_d.tga
examples/src/: clipping.cc  culling.cc  mrt.cc  texturing.cc  triangle.cc  zbuffer.cc
src/: context.cc  context.h  framebuffer.cc  framebuffer.h  main.cc  matrix.cc  matrix.h  obj_parser.cc  obj_parser.h  pipeline.cc  pipeline.h  shader.h  vector.h
src/app/: app.cc  app.h  error.h  fps_counter.cc  fps_counter.h  obj_parser.cc  obj_parser.h  tga_loader.cc  tga_loader.h
src/renderer/: arena.h  context.cc  context.h  framebuffer.cc  framebuffer.h  matrix.cc  matrix.h  pipeline.cc  pipeline.h  texture.cc  texture.h  vector.h
